--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+:root {
+  --color-primary: rgb(45, 149, 80);
+  --color-secondary: rgb(164, 164, 164);
+  --color-black: rgb(53, 53, 53);
+  --color-mute: rgb(191, 191, 191);
+  --color-white: #f3f3f3;
+}
+
 html,
 body {
+  background-color: #fff;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 a {
@@ -15,12 +24,27 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.container {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  background-color: white;
+  padding: 0.5rem 0.5rem;
+  font-size: 1rem;
+  /* border: none; */
+  border: 1px solid var(--color-primary);
+  /* border-bottom: 1px solid black; */
+  width: 100%;
+}
+input:focus {
+  outline: none;
+  /* border-bottom: 2px solid var(--color-primary); */
+}
+button {
+  cursor: pointer;
+  padding: 0.8rem;
 }
