--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,8 +35,9 @@ input {
   background-color: white;
   padding: 0.5rem 0.5rem;
   font-size: 1rem;
-  /* border: none; */
-  border: 1px solid var(--color-primary);
+  border: none;
+  border: 1px solid #e9e9e9;
+
   /* border-bottom: 1px solid black; */
   width: 100%;
 }
