fix height issues

--- a/components/UI/HourPicker/hourpicker.module.css
+++ b/components/UI/HourPicker/hourpicker.module.css
@@ -5,7 +5,7 @@
   gap: 0.5rem;
   flex-direction: column;
   overflow: hidden;
-  max-height: 500px;
+  /* max-height: 500px; */
 }
 .hour {
   display: flex;
