--- a/components/sections/reservation/reservation.module.css
+++ b/components/sections/reservation/reservation.module.css
@@ -16,5 +16,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
+    grid-template-rows: fit-content(0);
   }
 }
