--- a/components/sections/reservation/reservation.module.css
+++ b/components/sections/reservation/reservation.module.css
@@ -11,11 +11,21 @@
   width: 100%;
   overflow: hidden;
 }
+.arrowNext {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  justify-content: center;
+  transform: rotateZ(90deg);
+}
 @media screen and (min-width: 750px) {
   .sections {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr auto 1fr auto 1fr;
     justify-content: center;
     grid-template-rows: fit-content(0);
+  }
+  .arrowNext {
+    transform: rotateY(0);
   }
 }
